# ez-templates

./: .gitignore  LICENSE.md  README.md  package.json
.github/workflows/: publish.yml
lib/: constants.js  defaults.js  questions.js  repo.js  resolver.js  setup.js
templates/: README.md
templates/elixir_server/: .gitignore  README.md  mix.exs
templates/elixir_server/config/: config.exs
templates/elixir_server/lib/: elixir_server.ex
templates/elixir_server/test/: elixir_server_test.exs
templates/express/: Dockerfile  README.md  app.ts  package.json  server.ts  tsconfig.json
templates/express/auth/: jwt.ts  rateLimiter.ts
templates/express/errorHandling/: GenericError.ts  errorHandler.ts
templates/express/logging/: logger.ts  morgan.ts
templates/express/setup/: env-gen.bat  env-gen.sh
templates/express/tests/: server.test.ts
templates/express/utils/: cache.ts  env.config.ts  validator.ts
templates/go_server/: README.md  go.mod  main.go
templates/go_server/config/: config.go
templates/go_server/handlers/: test.go
templates/react/: .eslintrc.cjs  .gitignore  README.md  package.json  tsconfig.json  vite.config.js
templates/react/setup/: env-gen.bat  (+1 more)
templates/rust/: .gitignore  .prettierrc.toml  Cargo.toml  README.md  config.toml
templates/rust/src/: config.rs  constants.rs  jwt.rs  lib.rs  logs.rs  main.rs
templates/rust/src/interfaces/: api.rs  req.rs  res.rs  user.rs
templates/rust/src/routing/: auth.rs  mid.rs  router.rs  user.rs
templates/socketio/: .gitignore  app.ts  package.json  server.ts  tsconfig.json
test/: cli.test.js
(+32 files in other folders)
