[package]
authors = ["Andrea Pallotta <andreapallotta.dev@gmail.com>"]
description = "Secure REST API template written in Rust & Axum"
name = "server"
version = "1.0.0"
edition = "2021"
homepage = "https://github.com/AndreaPallotta/EzWebTemplate"
repository = "https://github.com/AndreaPallotta/EzWebTemplate"
keywords = ["rest", "api", "secure", "template"]
publish = false

[dependencies]
axum = "0.6.12"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3"}
schemars = { version = "0.8.12", features = ["chrono"] }
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
toml = "0.7.3"
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
utoipa-swagger-ui = { version = "3", features = ["axum"] }
utoipa = { version = "3", features = ["axum_extras"] }
urlencoding = "2.1.2"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }